--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.19",
     "expo": "~52.0.0-preview.16",
     "expo-constants": "~17.0.2",
     "expo-linking": "~7.0.2",
